[tool.poetry]
name = "py-progress-tracker"
version = "0.3.3"
description = "A simple benchmarking library"
authors = ["Zama <hello@zama.ai>"]
packages = [
    { include = "progress" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
colorama = "^0.4.4"
psutil = "^5.8.0"
py-cpuinfo = "^8.0.0"
tabulate = "^0.8.9"
termcolor = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
